<resources>
    <string name="app_name">BooksManagerDemo1.1</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">更多</string>
    <string name="title_notifications">个人中心</string>
    <string name="user_name">用户名</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
<<<<<<< HEAD
    <string name="borrows_management">借阅管理</string>
=======
>>>>>>> ebed69abb19d460f857b96fd5bf1ef8a750a1f72
</resources>